# py-text-to-speech

./: .replit  app.py  pyproject.toml
static/css/: custom.css
static/js/: script.js
templates/: index.html
